[gd_scene load_steps=2 format=3 uid="uid://c1al5g3rn04du"]

[ext_resource type="Script" uid="uid://ckbk518xf1j36" path="res://flood_fill_game.gd" id="1_wyk1y"]

[node name="FloodFillGame" type="Node2D"]
script = ExtResource("1_wyk1y")

[node name="GridContainer" type="GridContainer" parent="."]
offset_left = 286.0
offset_top = 60.0
offset_right = 997.25
offset_bottom = 629.0
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0

[node name="UI" type="VBoxContainer" parent="."]
offset_right = 82.0
offset_bottom = 120.0

[node name="Steps" type="Label" parent="UI"]
layout_mode = 2
text = "123"

[node name="Status" type="Label" parent="UI"]
layout_mode = 2

[node name="Restart" type="Button" parent="UI"]
layout_mode = 2
focus_mode = 0
text = "重新开始"

[node name="EditUI" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="EditUI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -126.0
offset_top = 8.0
offset_right = 126.0
offset_bottom = 40.0
grow_horizontal = 2
pivot_offset = Vector2(0.5, 0)
size_flags_horizontal = 4

[node name="Button" type="Button" parent="EditUI/HBoxContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
text = "保存"

[node name="Button2" type="Button" parent="EditUI/HBoxContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
text = "读取"

[node name="Button3" type="Button" parent="EditUI/HBoxContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
text = "清空"

[node name="Button4" type="Button" parent="EditUI/HBoxContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
text = "返回"

[node name="SaveDialog" type="FileDialog" parent="EditUI"]
access = 2
filters = PackedStringArray("*.txt")

[node name="LoadDialog" type="FileDialog" parent="EditUI"]
auto_translate_mode = 1
title = "Open a File"
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.txt")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorPalette" type="VBoxContainer" parent="CanvasLayer"]
layout_direction = 2
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -90.0
offset_right = -43.0
offset_bottom = 83.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[connection signal="button_up" from="UI/Restart" to="." method="_on_restart_pressed"]
[connection signal="button_down" from="EditUI/HBoxContainer/Button" to="." method="_on_save_pressed"]
[connection signal="button_down" from="EditUI/HBoxContainer/Button2" to="." method="_on_load_pressed"]
[connection signal="button_down" from="EditUI/HBoxContainer/Button3" to="." method="_on_clear_pressed"]
[connection signal="button_down" from="EditUI/HBoxContainer/Button4" to="." method="_on_return_pressed"]
